# envtrace

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs
src/files/: discovery.rs  mod.rs
src/output/: check.rs  compare.rs  function_trace.rs  mod.rs  trace.rs
src/parser/: common.rs  environment.rs  mod.rs  plist.rs  shell.rs  shell_function.rs
src/platform/: files.rs  linux.rs  macos.rs  mod.rs
src/trace/: engine.rs  function.rs  mod.rs  variable.rs
