[package]
name = "envtrace"
version = "0.1.1"
edition = "2024"
description = "Trace where environment variables are defined and modified"
license = "MIT"
repository = "https://github.com/FlerAlex/envtrace"
homepage = "https://github.com/FlerAlex/envtrace"
keywords = ["environment", "shell", "trace", "dotfiles", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
walkdir = "2"
regex = "1"
thiserror = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.16"
shellexpand = "3"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
